package fr.univnantes.alma.model.utlis;

public enum Phase {
    ONE, TWO, THREE, FOUR
}
